[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "taskforge"
version = "0.1.0"
description = "A hierarchical CLI task manager with subtasks and recurring tasks."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
taskforge = "taskforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
